third_party/move/move-compiler-v2/tests/checking/naming/unbound_struct_in_module.exp

Diagnostics:
error: undeclared `0x2::X::S`
  ┌─ tests/checking/naming/unbound_struct_in_module.move:6:16
  │
6 │     fun foo(s: X::S): X::S {
  │                ^^^^

error: undeclared `0x2::X::S`
  ┌─ tests/checking/naming/unbound_struct_in_module.move:6:23
  │
6 │     fun foo(s: X::S): X::S {
  │                       ^^^^
